# nvim-cargo-add

./: Cargo.toml  LICENSE  README.md  build.rs
lua/: nvim-cargo-add.lua
lua/nvim_cargo_add/: init.lua
plugin/: cargo-add.lua
src/: lib.rs
